--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   <td>
                <i>Dear Friend</i>
                 <ol>ME</ol>
-                    <a href="https://github.com/Hannahlei12/Hannahlei12.github.io/edit/master/rps.html">Rock Paper Scissors</a>
+                    <a href="https://raw.githubusercontent.com/Hannahlei12/Hannahlei12.github.io/master/rps.html">Rock Paper Scissors</a>
               </td>
            </tr>
             </table>
