--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
               </td>
               <td>
                     <a href="https://hannahlei12.github.io/rps.html">(CLICK ME) Rock Paper Scissors</a>
+                      /!--made by Gorlen(worked at the Mission Bit)
               </td>
                <style>
           html { 
