--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
               <td>
                     <a href="https://hannahlei12.github.io/rps.html">(CLICK ME) Rock Paper Scissors</a>
                   <!-- Made by Gorlen(worked at the Mission Bit) -->
+                 <!-- I also use the javascript in the rock, paper, scissors game -->
               </td>
                <style>
           html { 
